code/Lifetime/output/life_1.txt
error[E0597]: `y` does not live long enough
 --> life_1.rs:5:13
  |
5 |         x = &y;
  |             ^^ borrowed value does not live long enough
6 |     }
  |     - `y` dropped here while still borrowed
7 |     println!("{}", x);
  |                    - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
